--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Proteus-b-or-The-future-of-intelligence_74416
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 74416-h/images/cover_sm.jpg
 creator:
   author:
     agent_name: Lee, Vernon
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/2683
     wikipedia: https://en.wikipedia.org/wiki/Vernon_Lee
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74416#Proteus-b-or-The-future-of-intelligence
 gutenberg_issued: '2024-09-14'
 gutenberg_type: Text
 identifiers:
